--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,20 @@
+/* index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color-scheme: light dark;
 }
 
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-} */
-
-/* a:hover {
-  color: #535bf2;
-} */
+html {
+  font-family: "Onest Variable", system-ui, sans-serif;
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
@@ -33,43 +22,45 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  color: rgba(17, 17, 17, 0.9);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overscroll-behavior: none;
 }
 
-
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-} */
-
-/* button:hover {
-  border-color: #646cff;
-} */
-
-/* button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
   }
+}
 
-  a:hover {
-    color: #747bff;
+@media (prefers-color-scheme: dark) {
+  body {
+    color: rgba(255, 255, 255, 0.9);
   }
+}
 
-  button {
-    background-color: #f9f9f9;
-  }
+.background {
+  position: absolute;
+  top: 0;
+  z-index: -2;
+  min-height: 100%;
+  width: 100%;
+  background: white;
+  background: radial-gradient(
+    ellipse 80% 80% at 50% -20%,
+    rgba(120, 119, 198, 0.3),
+    rgba(255, 255, 255, 0)
+  );
+}
+
+.dark .background {
+  background: radial-gradient(
+    ellipse 80% 80% at 50% -20%,
+    rgba(120, 119, 198, 0.3),
+    rgba(255, 255, 255, 0)
+  );
 }
 
 @keyframes nav-shadow {
@@ -89,4 +80,10 @@ button:focus-visible {
 
 .animate-nav-shadow {
   animation: nav-shadow 1s linear both;
+}
+
+@layer utilities {
+  .animation-pause {
+    animation-play-state: paused;
+  }
 }
